Agregar que año el auto se registro

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
   
     <div id="falloAño" class="alert alert-danger" role="alert" hidden>
       <h2>Este año no se puede regularizar</h2>
-      <p>Este vehiculo parece haber sido registrado el: </p>
-      <p id="añoVIN"></p>
+      <p>Este vehiculo parece haber sido registrado el: <span id="añoRegistro"></span></p>
     </div>
   
     <div id="otroLugar" class="alert alert-danger hidden" role="alert" hidden>
